--- a/publibang/template/base.html
+++ b/publibang/template/base.html
@@ -22,27 +22,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/inicio/">Hyo.club</a>
-                <h4 class="navbar-text">Logueado como Dantelnuevoamigo</h4>
+                <a class="navbar-brand" href="/">Hyo.club</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <!--
-                  <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-success">buscar</button>
-                  </form>-->
                 <ul class="nav navbar-nav navbar-right">
+                	{% if user.is_authenticated %}
+                    <li><a href="/cuenta/" class='btn-lg'><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ user.username }} </a></li>
+                    <li><a href="/logout/" class='btn-lg'>logout </a></li>
+                    {% else %}
                     <li><a href="/registro/" class='btn-lg'>Registrarse <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle btn-lg" data-toggle="dropdown" role="button" aria- expanded="false">Ingresar <span class="glyphicon glyphicon-user" aria-hidden="true"></span>  </a>
+                        <a href="#" class="dropdown-toggle btn-lg" data-toggle="dropdown" role="button" aria-expanded="false">Ingresar <span class="glyphicon glyphicon-user" aria-hidden="true"></span>  </a>
                         <ul class="dropdown-menu" role="menu" style='width:300px;'>
                             <li>
                                 <div class="col-sm-12">
-                                    <form>
+                                    <form action="/login/" method="POST">
                                         <div class="form-group">
                                             <label class='text-white'for="exampleInputEmail1">Usuario</label>
                                             <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ingresa Usuario">
@@ -52,33 +48,31 @@
 
                                             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingrese Contraseña">
                                         </div>
-                                      <p class='text-right'><button type="submit" class="btn btn-success">Submit</button></p>
-                                      <p class="help-block">Recuperar contraseña <a href="#">Aqui!</a></p>
+	                                    <p class='text-right'><button type="submit" class="btn btn-success">Submit</button></p>
+	                                    <p class="help-block">Recuperar contraseña <a href="#">Aqui!</a></p>
                                     </form>
                                 </div>
                             </li>
                         </ul>
                     </li>
+                    {% endif %}
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-    
+
     {% block content %}{% endblock %}
-    
+
     <footer class="footer color-footer">
         <div class="container">
             <h4 class='text-center text-white'><span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span> Designed by <strong>TEAMLOSUNG</strong></h4>
         </div>
     </footer>
-
-    
-    
     <script src="{{STATIC_URL}}js/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="{{STATIC_URL}}js/jquery.countdown.js" type="text/<j></j>avascript" charset="utf-8"></script>
     <script src='{{STATIC_URL}}js/reloj.js'></script>
     <script src='{{STATIC_URL}}js/bootstrap.js'></script>
-    
+
 </body>
 </html>
 
