--- a/publibang/static/css/custom.css
+++ b/publibang/static/css/custom.css
@@ -37,4 +37,6 @@ br { clear: both; }
     background-color: #dd4814;
   border-color: #bf3e11;
 }
-
+body > .container {
+    padding: 60px 0px 0;
+}
