--- a/publibang/template/base.html
+++ b/publibang/template/base.html
@@ -12,8 +12,8 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -29,8 +29,14 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                 	{% if user.is_authenticated %}
-                    <li><a href="/cuenta/" class='btn-lg'><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ user.username }} </a></li>
-                    <li><a href="/logout/" class='btn-lg'>logout </a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle btn-lg" data-toggle="dropdown" role="button" aria-expanded="false">{{ user.username }} <span class="glyphicon glyphicon-user" aria-hidden="true"></span>  </a>
+                        <ul class="dropdown-menu" role="menu" style='width:300px;'>
+                            <li>
+                                <a href="/logout/" class='btn-lg'>logout </a>
+                            </li>
+                        </ul>
+                    </li>
                     {% else %}
                     <li><a href="/registro/" class='btn-lg'>Registrarse <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></li>
                     <li class="dropdown">
@@ -39,16 +45,16 @@
                             <li>
                                 <div class="col-sm-12">
                                     <form action="/login/" method="POST">
+                                    	<input type='hidden' name='csrfmiddlewaretoken' value='{{ csrf_token }}' />
                                         <div class="form-group">
-                                            <label class='text-white'for="exampleInputEmail1">Usuario</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ingresa Usuario">
+                                            <label class='text-white'for="InputUsuario">Usuario</label>
+                                            <input type="text" class="form-control" id="InputUsuario" placeholder="Ingresa Usuario" name="username">
                                         </div>
                                         <div class="form-group">
-                                            <label class='text-white'for="exampleInputPassword1">Contraseña</label>
-
-                                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Ingrese Contraseña">
+                                            <label class='text-white'for="InputPassword">Contraseña</label>
+                                            <input type="password" class="form-control" id="InputPassword" placeholder="Ingrese Contraseña" name="password">
                                         </div>
-	                                    <p class='text-right'><button type="submit" class="btn btn-success">Submit</button></p>
+	                                    <p class='text-right'><button type="submit" class="btn btn-success">Enviar</button></p>
 	                                    <p class="help-block">Recuperar contraseña <a href="#">Aqui!</a></p>
                                     </form>
                                 </div>
@@ -62,17 +68,15 @@
     </nav>
 
     {% block content %}{% endblock %}
-
     <footer class="footer color-footer">
         <div class="container">
             <h4 class='text-center text-white'><span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span> Designed by <strong>TEAMLOSUNG</strong></h4>
         </div>
     </footer>
     <script src="{{STATIC_URL}}js/jquery.js" type="text/javascript" charset="utf-8"></script>
-    <script src="{{STATIC_URL}}js/jquery.countdown.js" type="text/<j></j>avascript" charset="utf-8"></script>
-    <script src='{{STATIC_URL}}js/reloj.js'></script>
     <script src='{{STATIC_URL}}js/bootstrap.js'></script>
-
+    {% block js %}
+    {% endblock %}
 </body>
 </html>
 
