--- a/publibang/template/registro.html
+++ b/publibang/template/registro.html
@@ -11,95 +11,103 @@
                     <div class="col-xs-12">
                         <div class="col-xs-6">
                             <div class="col-xs-12">
-                                    <div class="form-group">
-                                        <label for="exampleInputName2" class="col-sm-3 control-label">Usuario</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="exampleInputName2" placeholder="Elige un Usuario">
-                                        </div>
+                                <div class="form-group">
+                                    <label for="InputUsuario" class="col-sm-3 control-label">Usuario</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" class="form-control" id="InputUsuario" placeholder="Escriba un Usuario" name="usermane" required>
                                     </div>
+                                </div>
                             </div>
 
                             <div class="col-xs-12">
-                                    <div class="form-group">
-                                        <label for="inputPassword3" class="col-sm-3 control-label">Contraseña</label>
-                                        <div class="col-sm-9">
-                                            <input type="password" class="form-control" id="inputPassword3" placeholder="Escribe una contraseña">
-                                        </div>
+                                <div class="form-group">
+                                    <label for="inputPassword" class="col-sm-3 control-label">Contraseña</label>
+                                    <div class="col-sm-9">
+                                        <input type="password" class="form-control" id="inputPassword" placeholder="Escribe una contraseña" name="password1" required>
                                     </div>
+                                </div>
                             </div>
 
                             <div class="col-xs-12">
-                                    <div class="form-group">
-                                        <label for="inputPassword3" class="col-sm-3 control-label">Contraseña</label>
-                                        <div class="col-sm-9">
-                                            <input type="password" class="form-control" id="inputPassword3" placeholder="Repite la contraseña">
-                                        </div>
+                                <div class="form-group">
+                                    <label for="inputPassword2" class="col-sm-3 control-label">Contraseña</label>
+                                    <div class="col-sm-9">
+                                        <input type="password" class="form-control" id="inputPassword2" placeholder="Repite la contraseña" name="password2" required>
                                     </div>
+                                </div>
                             </div>
                             <div class="col-xs-12">
-                                    <div class="form-group">
-                                        <label for="exampleInputName2" class="col-sm-3 control-label">Nº Movil</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="exampleInputName2" placeholder="escribe un numero movil ">
-                                        </div>
+                                <div class="form-group">
+                                    <label for="InputMovil" class="col-sm-3 control-label">Nº Movil</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" class="form-control" id="InputMovil" placeholder="Escribe un numero movil" name="phone" required>
                                     </div>
+                                </div>
                             </div>
-
+                            <div class="col-xs-12">
+                                <div class="form-group">
+                                    <label for="InputEmail" class="col-sm-3 control-label">Email</label>
+                                    <div class="col-sm-9">
+                                        <input type="email" class="form-control" id="InputEmail" placeholder="Email" name="email" required>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-xs-6">
                             <div class="col-xs-12">
                                 <div class="form-group">
-                                    <label for="exampleInputName2" class="col-sm-3 control-label">Nombre</label>
+                                    <label for="InputNombres" class="col-sm-3 control-label">Nombre</label>
                                     <div class="col-sm-9">
-                                        <input type="text" class="form-control" id="exampleInputName2" placeholder="Nombres">
+                                        <input type="text" class="form-control" id="InputNombres" placeholder="Nombres" name="first_name" required>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xs-12">
-                                    <div class="form-group">
-                                        <label for="exampleInputName2" class="col-sm-3 control-label">Apellidos</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="exampleInputName2" placeholder="Apellidos">
-                                        </div>
+                                <div class="form-group">
+                                    <label for="InputApellidos" class="col-sm-3 control-label">Apellidos</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" class="form-control" id="InputApellidos" placeholder="Apellidos" name="last_name" required>
                                     </div>
-                            </div>
-                            <div class="col-xs-12">
-                                    <div class="form-group">
-                                        <label for="exampleInputName2" class="col-sm-3 control-label">D N I</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="exampleInputName2" placeholder="D N I">
-                                        </div>
-                                    </div>
+                                </div>
                             </div>
                             <div class="col-xs-12">
                                 <div class="form-group">
-                                    <label for="inputPassword3" class="col-sm-3 control-label">Operadora</label>
+                                    <label for="InputDNI" class="col-sm-3 control-label">D N I</label>
                                     <div class="col-sm-9">
-                                        <select class="form-control">
-                                            <option>Claro</option>
-                                            <option>Movistar</option>
-                                            <option>Entel</option>
-                                            <option>Bitel</option>
-                                            <option>Nextel</option>
+                                        <input type="text" class="form-control" id="InputDNI" placeholder="D N I" name="dni" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12">
+                                <div class="form-group">
+                                    <label for="selectOperadora" class="col-sm-3 control-label">Operadora</label>
+                                    <div class="col-sm-9">
+                                        <select class="form-control" id="selectOperadora" name="operador" required>
+                                            <option value="claro">Claro</option>
+                                            <option value="movistar">Movistar</option>
+                                            <option value="entel">Entel</option>
+                                            <option value="bitel">Bitel</option>
+                                            <option value="nextel">Nextel</option>
                                         </select>
                                     </div>
                                 </div>
                             </div>
-                        </div> 
-                    </div>          
+
+                        </div>
+                    </div>
                     <hr />
                     <div class="col-xs-12">
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <p class='text-right'><button type="submit" class="btn btn-success btn-lg">Sign in</button></p>
+                                <p class='text-right'><button type="submit" class="btn btn-success btn-lg">Enviar</button></p>
                             </div>
                         </div>
                     </div>
-                    
-                </form> 
+
+                </form>
             </div>
-        </div>    
+        </div>
     </div>
 </div>
 {% endblock %}
-    
+
