--- a/publibang/static/css/custom.css
+++ b/publibang/static/css/custom.css
@@ -1,10 +1,6 @@
-/*@font-face {font-family: 'Agency FB';src: url('../fonts/agency_fb.eot');	src: local('Agency FB'),url('../fonts/agency_fb.woff') format('woff'),url('../fonts/agency_fb.ttf') format('truetype'),url('../fonts/agency_fb.svg') format('svg');font-weight: normal;font-style: normal;}
-*/body {font-family: 'Agency FB', arial;font-size: 20px;color: #666;/*background-image: url("../img/fondo.jpg")*/;background-attachment: fixed;background-size: cover;}
-
-
 
 .m-left{
-	margin-left: -40px;
+    margin-left: -40px;
 }
 br { clear: both; }
 
@@ -34,9 +30,31 @@ br { clear: both; }
 }
 
 .color-footer{
-    background-color: #dd4814;
-  border-color: #bf3e11;
+    /*background-color: #dd4814;
+  border-color: #bf3e11;*/
+    background-image: linear-gradient(#54b4eb, #2fa4e7 60%, #1d9ce5);
+  background-repeat: no-repeat;
 }
-body > .container {
-    padding: 60px 0px 0;
+
+.fondo-ganador{
+    position: absolute;
+    z-index: -1;
+}
+
+.ubicacion-ganador{
+    font-size: 18px;
+  margin-left: 220px;
+  margin-top: 235px; }
+
+.m-bottom5{
+    margin-bottom: 5px;
+}
+.m-bottom10{
+    margin-bottom: 5px;
+}
+.m-bottom15{
+    margin-bottom: 5px;
+}
+.m-bottom20{
+    margin-bottom: 20px;
 }
