--- a/publibang/static/css/styck-footer.css
+++ b/publibang/static/css/styck-footer.css
@@ -1,8 +1,11 @@
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 50px;
-  background-color: #f5f5f5;
+
+#footer {
+	  position: absolute;
+	  bottom: 0;
+	  width: 100%;
+	  /* Set the fixed height of the footer here */
+	  height: 50px;
+	  background-color: #f5f5f5;
+	  margin: -150px auto 0;
 }
+
