--- a/publibang/template/base.html
+++ b/publibang/template/base.html
@@ -6,10 +6,9 @@
     <title>Document</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>www.hyo.club</title>
-    <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap.css" />
+    <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap2.css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/styck-footer.css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/custom.css" />
-
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -23,6 +22,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/">Hyo.club</a>
+
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -66,13 +66,13 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-
+<br><br><br>
     {% block content %}{% endblock %}
-    <footer class="footer color-footer">
+    <!--<footer id='footer' class='color-footer'>
         <div class="container">
             <h4 class='text-center text-white'><span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span> Designed by <strong>TEAMLOSUNG</strong></h4>
         </div>
-    </footer>
+    </footer>-->
     <script src="{{STATIC_URL}}js/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src='{{STATIC_URL}}js/bootstrap.js'></script>
     {% block js %}
