--- a/publibang/template/lista.html
+++ b/publibang/template/lista.html
@@ -21,7 +21,8 @@
                         <tr>
                             <th class='text-center'>#</th>
                             <th>Usuario</th>
-                            <th>Hora</th>
+                            <th>Hora de participacion</th>
+                            <th>Evento al que participa</th>
                         </tr>
                     </thead>
                     <tbody>
