--- a/publibang/template/base.html
+++ b/publibang/template/base.html
@@ -3,12 +3,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>www.hyo.club</title>
-    <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap2.css" />
+    <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap.css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/styck-footer.css" />
     <link rel="stylesheet" href="{{STATIC_URL}}css/custom.css" />
+    <link rel="stylesheet" href="{{STATIC_URL}}css/TimeCircles.css" />
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -27,6 +28,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                
                 <ul class="nav navbar-nav navbar-right">
                 	{% if user.is_authenticated %}
                     <li class="dropdown">
@@ -73,6 +75,9 @@
             <h4 class='text-center text-white'><span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span> Designed by <strong>TEAMLOSUNG</strong></h4>
         </div>
     </footer>-->
+    <div class="row">
+        <br><br>
+    </div>
     <script src="{{STATIC_URL}}js/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src='{{STATIC_URL}}js/bootstrap.js'></script>
     {% block js %}
