espacio de premio

--- a/publibang/template/miniweb.html
+++ b/publibang/template/miniweb.html
@@ -7,6 +7,9 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-3">
+            <div class="alert alert-info" role="alert">
+              <strong>Premio de esta semana</strong> Un cover para 2 personas en la peña LA PENCA
+            </div>
         </div>
         <div class="col-xs-5">
             <h2 class='text-center text-success'><strong>RECREO CAMPESTRE "BAMBU"</strong></h2>
