horario y letras con shadow

--- a/publibang/template/miniweb.html
+++ b/publibang/template/miniweb.html
@@ -11,16 +11,12 @@
               <strong>Premio de esta semana</strong> Un cover para 2 personas en la peña LA PENCA
             </div>
         </div>
-        <div class="col-xs-5">
-            <h2 class='text-center text-success'><strong>RECREO CAMPESTRE "BAMBU"</strong></h2>
+        <div class="col-xs-6">
+            <h2 class='shadow-text text-center text-info'><strong>!GRACIAS POR VISITAR MI ESPACIO!</strong></h2>
         </div>
-        <div class="text-right col-xs-4">
+        <div class="text-right col-xs-3"> 
             
-                
-
-               
-            
-            <!--<h4 class='text-center'><strong class='text-info'>Horario de atencion</strong> : <span class='btn btn-success'>8:30 AM - 10:00 PM</span></span>  </h4>-->
+            <h4 class='text-center'><strong class='text-info'>Horario de atencion</strong><span class='btn btn-success'>8:30 AM - 10:00 PM</span></span>  </h4>
         <br>
         </div>
                     
@@ -83,7 +79,8 @@
         
         <div class="col-xs-9">
             <div class="row">
-                <h3 class='text-center text-info'><strong>!GRACIAS POR VISITAR MI ESPACIO!</strong></h3>
+                <h2 class='text-center text-orange shadow-text'><strong>RECREO CAMPESTRE "BAMBU"</strong></h2>
+                
                 <div role="tabpanel"><!-- Nav tabs -->
                     <ul class="nav nav-tabs" role="tablist">
                         <li role="presentation" class="active"><a href="#tab1" aria-controls="home" role="tab" data-toggle="tab"><strong>PRODUCTOS Y OFERTAS</strong></a></li>
